Fix: Fixed link formatting, added Whack 'em Moles video to page
Fix: Project links on individual pages used to have too much margin, causing wrong link addresses to happen. Removed padding from link hitboxes (lol).
Added video of Whack 'em Moles trailer to project page.

--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ div .card-body p {
     padding-top: 0;
 }
 
+.project-link {
+    padding-top: 0;
+}
+
 /* SOCIALS FOOTER =============== */
 footer {
     padding-bottom: 2%;
